--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -18,26 +18,26 @@
 <main>
   <div class="wrapper">
     <div class="pagination">
-        <div class="pagination__element">
+        <div class="pagination__page-link">
           <i class="bi bi-chevron-left"></i>
         </div>
 
         <ul class="pagination__page-list">
-          <li class="pagination__element">1</li>
-          <li class="pagination__element">2</li>
-          <li class="pagination__element">3</li>
-          <li class="pagination__element">4</li>
-          <li class="pagination__element">5</li>
-          <li class="pagination__element">6</li>
-          <li class="pagination__element">7</li>
-          <li class="pagination__element">8</li>
-          <li class="pagination__element">9</li>
-          <li class="pagination__element">10</li>
-          <li class="pagination__element">11</li>
-          <li class="pagination__element">12</li>
+          <li class="pagination__page-link active">1</li>
+          <li class="pagination__page-link">2</li>
+          <li class="pagination__page-link">3</li>
+          <li class="pagination__page-link">4</li>
+          <li class="pagination__page-link">5</li>
+          <li class="pagination__page-link">6</li>
+          <li class="pagination__page-link">7</li>
+          <li class="pagination__page-link">8</li>
+          <li class="pagination__page-link">9</li>
+          <li class="pagination__page-link">10</li>
+          <li class="pagination__page-link">11</li>
+          <li class="pagination__page-link">12</li>
         </ul>
 
-        <div class="pagination__element">
+        <div class="pagination__page-link">
           <i class="bi bi-chevron-right"></i>
         </div>
     </div>
