added some improvements to pagination component

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -18,32 +18,53 @@
 
 <main>
   <div class="wrapper">
-    <div class="previous-page">
-        <a href="" class="pagination">
+      <!-- Pagination component -->
+    <nav class="pagination">
+        <a href="#" data-element="prev-next" class="prev-page pages">
           <i class="bi bi-chevron-left"></i>
         </a>
-    </div>
-    <div class="pages">
-      <ul class="pages-list">
-        <li class="pagination">1</li>
-        <li class="pagination">2</li>
-        <li class="pagination">3</li>
-        <li class="pagination">4</li>
-        <li class="pagination">5</li>
-        <li class="pagination">6</li>
-        <li class="pagination">7</li>
-        <li class="pagination">8</li>
-        <li class="pagination">9</li>
-        <li class="pagination">10</li>
-        <li class="pagination">11</li>
-        <li class="pagination">12</li>
-      </ul>
-    </div>
-    <div class="next-page">
-        <a href="" class="pagination">
+        <ul class="pages-list">
+          <li>
+            <a href="#" data-element="page-link" class="pages active" data-page-index = "0">1</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "1">2</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "2">3</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "3">4</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "4">5</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "5">6</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "6">7</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "7">8</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "8">9</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "9">10</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "10">11</a>
+          </li>
+          <li>
+            <a href="#" data-element="page-link" class="pages" data-page-index = "11">12</a>
+          </li>
+        </ul>
+        <a href="#" data-element="nav-next" class="next-page pages">
           <i class="bi bi-chevron-right"></i>
         </a>
-    </div>
+      </nav>
   </div>
 </main>
 
