--- a/components/card/style.css
+++ b/components/card/style.css
@@ -73,15 +73,22 @@ header{
     background: #7E72F2;
     width:120px;
     height:36px;
+    border-radius:3px;
+    cursor:pointer;
+}
+.basket>a{
     color:#ffffff;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration:none;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius:3px;
+    height: 100%;
 }
 
 .container {
@@ -311,6 +318,9 @@ h2{
     cursor:pointer;
 }
 .container_corausel{
+    width:100%;
+}
+.container_corausel>ul{
     padding:20px;
     display:flex;
     margin:0 auto;
@@ -319,19 +329,30 @@ h2{
 .next, .back{
     margin:0 15px;
     position:relative;
-    transition:background 0.2s linear;
 }
-.container_corausel>span{
-    display:flex;
+.container_corausel li{
     width: 40px;
     height:40px;
     border-radius: 50%;
+    overflow: hidden;
+}
+.page_link{
+    text-decoration: none;
+    color:#2C2C2C;
+    display: block;
+    width: 100%;
+    height: 100%;
     background:#EDEDED;
     justify-content: center;
     align-items: center;
-    color:#2C2C2C;
-    cursor:pointer;
+    display:flex;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 12px;
 }
-.next:hover, .back:hover{
-    background:#7E72F2
+.page_link:hover{
+    background:#7E72F2;
+    transition:background 0.2s linear;
 }
