--- a/components/slide/index-slide.html
+++ b/components/slide/index-slide.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3">
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,300&family=Montserrat:wght@400;700&display=swap"
     rel="stylesheet">
@@ -25,19 +27,21 @@
               d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
           </svg>
         </button>
-        <button type="submit" name="page1" class="pagination-item1 item">1</button>
-        <button type="submit" name="page2" class="pagination-item2 item">2</button>
-        <button type="submit" name="page3" class="pagination-item3 item">3</button>
-        <button type="submit" name="page4" class="pagination-item4 item">4</button>
-        <button type="submit" name="page5" class="pagination-item5 item">5</button>
-        <button type="submit" name="page6" class="pagination-item6 item">6</button>
-        <button type="submit" name="page7" class="pagination-item7 item">7</button>
-        <button type="submit" name="page8" class="pagination-item8 item">8</button>
-        <button type="submit" name="page9" class="pagination-item9 item">9</button>
-        <button type="submit" name="page10" class="pagination-item10 item">10</button>
-        <button type="submit" name="page11" class="pagination-item11 item">11</button>
-        <button type="submit" name="page12" class="pagination-item12 item">12</button>
-        <button type="submit" name="next-page" class="pagination-vector-next item">
+        <div class="all-pages">
+          <button type="submit" data-element="page-link" name="page1" class="pagination-item1 item">1</button>
+          <button type="submit" data-element="page-link" name="page2" class="pagination-item2 item">2</button>
+          <button type="submit" data-element="page-link" name="page3" class="pagination-item3 item">3</button>
+          <button type="submit" data-element="page-link" name="page4" class="pagination-item4 item">4</button>
+          <button type="submit" data-element="page-link" name="page5" class="pagination-item5 item">5</button>
+          <button type="submit" data-element="page-link" name="page6" class="pagination-item6 item">6</button>
+          <button type="submit" data-element="page-link" name="page7" class="pagination-item7 item">7</button>
+          <button type="submit" data-element="page-link" name="page8" class="pagination-item8 item">8</button>
+          <button type="submit" data-element="page-link" name="page9" class="pagination-item9 item">9</button>
+          <button type="submit" data-element="page-link" name="page10" class="pagination-item10 item">10</button>
+          <button type="submit" data-element="page-link" name="page11" class="pagination-item11 item">11</button>
+          <button type="submit" data-element="page-link" name="page12" class="pagination-item12 item">12</button>
+        </div>
+        <button type="submit" data-element="page-link" name="next-page" class="pagination-vector-next item">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right"
             viewBox="0 0 16 16">
             <path fill-rule="evenodd"
