--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -17,26 +17,26 @@
 <body>
   <main>
     <div class="wrapper">
-      <div class="pagination">
-        <div class="page previous-page">
+      <ul class="pagination">
+        <li class="page previous-page">
           <i class="bi bi-chevron-left"></i>
-        </div>
-        <div class="page next-page">
+        </li>
+        <li class="page next-page">
           <i class="bi bi-chevron-right"></i>
-        </div>
-        <div class="page active">1</div>
-        <div class="page">2</div>
-        <div class="page">3</div>
-        <div class="page">4</div>
-        <div class="page">5</div>
-        <div class="page">6</div>
-        <div class="page">7</div>
-        <div class="page">8</div>
-        <div class="page">9</div>
-        <div class="page">10</div>
-        <div class="page">11</div>
-        <div class="page">12</div>
-      </div>
+        </li>
+        <li><a href="#" class="page active">1</a></li>
+        <li><a href="#" class="page">2</a></li>
+        <li><a href="#" class="page">3</a> </li>
+        <li><a href="#" class="page">4</a></li>
+        <li><a href="#" class="page">5</a></li>
+        <li><a href="#" class="page">6</a></li>
+        <li><a href="#" class="page">7</a></li>
+        <li><a href="#" class="page">8</a></li>
+        <li><a href="#" class="page">9</a></li>
+        <li><a href="#" class="page">10</a></li>
+        <li><a href="#" class="page">11</a></li>
+        <li><a href="#" class="page">12</a></li>
+      </ul>
     </div>
   </main>
 </body>
