--- a/components/card/index.html
+++ b/components/card/index.html
@@ -12,6 +12,7 @@
       margin: 100px auto;
     }
   </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <div class="card-head">
           <div class="card-rating button-text ">
             <span>1.23</span>
-            <img src="../Star 1.png" alt="star">
+            <a><i class="bi bi-star"></i></a>
           </div>
           <div class="price">15999</div>
         </div>
