--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Pagination component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML/CSS Pagination component</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="wrapper">
+        <nav class="os-padgination">
+          <a href="#" class="page-left" data-element="nav-prev">
+            <i class="bi bi-chevron-left">&lt;</i>
+          </a>
+          <ul class="page-list" date-element="pagination">
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link active"
+                data-page-index="0"
+                >1</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link"
+                data-page-index="0"
+                >2</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link"
+                data-page-index="0"
+                >3</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link"
+                data-page-index="0"
+                >4</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link"
+                data-page-index="0"
+                >5</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link"
+                data-page-index="0"
+                >6</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link"
+                data-page-index="0"
+                >7</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link"
+                data-page-index="0"
+                >8</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link"
+                data-page-index="0"
+                >9</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                date-element="page-link"
+                class="page-link"
+                data-page-index="0"
+                >10</a
+              >
+            </li>
+          </ul>
+          <a href="#" class="page-right" data-element="nav-next">
+            <i class="bi ni-chevron-right">&gt;</i>
+          </a>
+        </nav>
+      </div>
+    </main>
+  </body>
 </html>
