--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,19 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <nav class="os-pagination">
+      <a href="#" class="page-link previous" data-elements="nav-previous">
+        <i class="bi bi-chervon-left"></i>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+        </svg>
+        </a>
+    <ul class="page-list" data-element="pagination">
+      <li>
+        <a href="#" data-element="page-link" class="page-link active" data-page-index="o">1</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="1">2</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="2">3</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="3">4</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="4">5</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="5">6</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="6">7</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="7">8</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="8">9</a>
+      </li>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="9">10</a>
+      </li>
+    </ul>
+    <a href="#" class="page-link next" data-elements="nav-next">
+      <i class="bi bi-chervon-right"></i>
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+      </svg>
+      </a>
+  </nav>
   </div>
 </main>
 
