--- a/components/pagination/paginator.css
+++ b/components/pagination/paginator.css
@@ -9,6 +9,8 @@
 .paginator a {
   line-height: 1;
   text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 
 }
 
