--- a/components/pagination/paginator.html
+++ b/components/pagination/paginator.html
@@ -5,7 +5,9 @@
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="/online-store/components/pagination/paginator.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
 
