--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <title>HTML/CSS Pagination component</title>
+  <title>HTML/CSS Paginatio component</title>
+  <!-- CSS only -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 
   <style>
     .wrapper {
       margin: 100px auto;
     }
+
   </style>
 </head>
+
 <body>
-
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
-
+  <main>
+    <div class="wrapper">
+      <nav class="row">
+        <i class="bi bi-arrow-left page-link"></i>
+        <div class="page-link active">1</div>
+        <div class="page-link">2</div>
+        <div class="page-link">3</div>
+        <div class="page-link">4</div>
+        <div class="page-link">5</div>
+        <div class="page-link">6</div>
+        <div class="page-link">7</div>
+        <div class="page-link">8</div>
+        <div class="page-link">9</div>
+        <div class="page-link">10</div>
+        <div class="page-link">11</div>
+        <div class="page-link">12</div>
+        <i class="bi bi-arrow-right page-link "></i>
+      </nav>
+    </div>
+  </main>
 </body>
+
 </html>
