--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -25,7 +25,7 @@
 
       <ul class="list-components" data-element="pagination">
         <li>
-          <a href="#" class="link-components active" data-element="page-link" data-page-index="1">1</a>
+          <a href="#" class="link-components active" data-element="page-lin" data-page-index="1">1</a>
         </li>
         <li>
           <a href="#" class="link-components" data-element="page-link" data-page-index="2">2</a>
