--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
   <style>
     .wrapper {
@@ -13,9 +14,29 @@
   </style>
 </head>
 <body>
+
 <main>
-  <div class="wrapper">
-    <!-- Card component -->
+  <div class="all-card">
+
+    <div class="card-img"></div>
+
+    <div class="card-description-product">
+      <div class="card-star-price">
+        <div class="card-star">
+          <span>2.89</span>
+          <i class="bi bi-hand-thumbs-up"></i>
+        </div>
+        <div class="card-price">21500</div>
+      </div>
+
+      <h5 class="card-description">Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.ooL) Charcoal Blak</h5>
+      <p class="card-laptops">laptops</p>
+    </div>
+
+    <div class="card-battom">
+      <div class="battom">ADD TO CART</div>
+    </div>
+
   </div>
 </main>
 </body>
