--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,21 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
-
 <main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
 
+  <div class="wrapper">
+
+    <div class="wrapper-pagination">
+
+      <button class="btn-back btn-button-class">
+        <i class="bi bi-chevron-left"></i>
+      </button>
+
+      <button class="btn-1 btn-button-class">1</button>
+      <button class="btn-2 btn-button-class">2</button>
+      <button class="btn-3 btn-button-class">3</button>
+      <button class="btn-4 btn-button-class">4</button>
+      <button class="btn-5 btn-button-class">5</button>
+      <button class="btn-6 btn-button-class">6</button>
+      <button class="btn-7 btn-button-class">7</button>
+      <button class="btn-8 btn-button-class">8</button>
+      <button class="btn-9 btn-button-class">9</button>
+      <button class="btn-10 btn-button-class">10</button>
+      <button class="btn-11 btn-button-class">11</button>
+      <button class="btn-12 btn-button-class">12</button>
+
+      <button class="btn-forward btn-button-class">
+        <i class="bi bi-chevron-right"></i>
+      </button>
+
+    </div>
+
+  </div>
+
+</main>
 </body>
 </html>
