--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -4,29 +4,69 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icoms.css">
   <link rel="stylesheet" href="/css/style.css">
-  <title>PAGINATION</title>
+  <link rel="stylesheet" href="https://cdn.jsde.">
+  <title>pagination</title>
 </head>
 <body>
-  <div class="block">
-   <div class="buttons">
-         <div class="btn _img"><img src="img/Vector2.png " alt=""> </div>
-         <div class="btn1">1</div>
-         <div class="btn">2 </div>
-         <div class="btn">3 </div>
-         <div class="btn">4 </div>
-         <div class="btn">5 </div>
-         <div class="btn">6 </div>
-         <div class="btn">7 </div>
-         <div class="btn">8 </div>
-         <div class="btn">9 </div>
-         <div class="btn">10</div>
-         <div class="btn">11</div>
-         <div class="btn">12</div>
-         <div class="btn _img"><img src="img/Vector 1.png" alt=""></div>
+  <main>
+    <div class="wrapper">
 
+     <nav class="nav-pagination">
+       <a href="#" class="page-link previous" data-element="nav-prev">
+        <i class="bi bi-chevron-left"></i>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+        </svg>
+       </a>
+       <ul class="page-list" data-element="pagination">
+         <li>
+           <a href="#" data-element="page-link" class="page-link active" data-page-index="1">1</a>
+         </li>
+         <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="2">2</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="3">3</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="4">4</a>
+        </li>
+         <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="5">5</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="6">6</a>
+        </li>
+        <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="7">7</a>
+       </li>
+        <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="8">8</a>
+       </li>
+       <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="9">9</a>
+       </li>
+       <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="10">10</a>
+       </li>
+        <li>
+         <a href="#" data-element="page-link" class="page-link" data-page-index="11">11</a>
+       </li>
+       <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="12">12</a>
+      </li>
+      </ul>
+      <a href="#" class="page-link next" data-element="nav-text">
+        <i class="bi bi-chevron-right"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+        </svg></i>
+      </a>
+
+     </nav>
     </div>
-  </div>
+  </main>
 
 </body>
 </html>
