--- a/components/pagination/css/style.css
+++ b/components/pagination/css/style.css
@@ -1,12 +1,12 @@
 .wrapper {
   margin-top: 40px;
+  margin-bottom: 10px;
 }
 .nav-pagination {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .previous,
 .next  {
   color: #000;
