--- a/components/card/index.html
+++ b/components/card/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
 </head>
 
@@ -18,7 +19,7 @@
         <div class="product-price-wrapper">
           <div class="product-rating">
             <span>1.23</span>
-            <img class="icon" src="/img/Star 1.svg" alt="star">
+            <i class="bi bi-star"></i>
           </div>
           <div class="product-price">15999</div>
         </div>
