--- a/components/card/style.css
+++ b/components/card/style.css
@@ -53,10 +53,6 @@ h1, h2, h3, h4, h5, h6 {
   background: var(--purple-100);
   font-size: 13px;
   color: var(--white);
-}
-
-.product-rating img{
-  vertical-align: -0.5px;
   margin-left: 5px;
 }
 
@@ -90,6 +86,8 @@ h1, h2, h3, h4, h5, h6 {
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   cursor: pointer;
+  transition: .3s;
+
 }
 
 .product-footer button:hover{
