Use ul for buttons

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -18,24 +18,52 @@
   <div class="wrapper">
 
     <div class="pagination">
-      <button class="pagination-item"><i class="bi bi-chevron-left"></i></button>
+      <a href="#" class="pagination-item" data-element="nav-prev">
+        <i class="bi bi-chevron-left"></i>
+      </a>
 
-      <div class="pagination-center">
-        <button class="pagination-item">1</button>
-        <button class="pagination-item">2</button>
-        <button class="pagination-item">3</button>
-        <button class="pagination-item">4</button>
-        <button class="pagination-item">5</button>
-        <button class="pagination-item">6</button>
-        <button class="pagination-item">7</button>
-        <button class="pagination-item">8</button>
-        <button class="pagination-item">9</button>
-        <button class="pagination-item">10</button>
-        <button class="pagination-item">11</button>
-        <button class="pagination-item">12</button>
-      </div>
+      <ul class="pagination-center" data-element="pagination">
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item active" data-page-index="0">1</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="1">2</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="2">3</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="3">4</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="4">5</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="5">6</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="6">7</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="7">8</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="8">9</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="9">10</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="10">11</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination-item" data-page-index="11">12</a>
+        </li>
+      </ul>
 
-      <button class="pagination-item"><i class="bi bi-chevron-right"></i></button>
+      <a href="#" class="pagination-item" data-element="nav-next">
+        <i class="bi bi-chevron-right"></i>
+      </a>
     </div>
 
   </div>
