--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
@@ -11,24 +14,32 @@
 <main>
   <div class="wrapper">
     <div class="left-arrow">
-      <
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-left"
+        viewBox="0 0 16 16">
+        <path
+          d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z" />
+      </svg>
     </div>
     <div class="rounds">
-      <div class="page1">1</div>
-      <div class="page2">2</div>
-      <div class="page3">3</div>
-      <div class="page4">4</div>
-      <div class="page5">5</div>
-      <div class="page6">6</div>
-      <div class="page7">7</div>
-      <div class="page8">8</div>
-      <div class="page9">9</div>
-      <div class="page10">10</div>
-      <div class="page11">11</div>
-      <div class="page12">12</div>
+      <div class="page1" class="page-link active">1</div>
+      <div class="page2" class="page-link active">2</div>
+      <div class="page3" class="page-link active">3</div>
+      <div class="page4" class="page-link active">4</div>
+      <div class="page5" class="page-link active">5</div>
+      <div class="page6" class="page-link active">6</div>
+      <div class="page7" class="page-link active">7</div>
+      <div class="page8" class="page-link active">8</div>
+      <div class="page9" class="page-link active">9</div>
+      <div class="page10" class="page-link active">10</div>
+      <div class="page11" class="page-link active">11</div>
+      <div class="page12" class="page-link active">12</div>
     </div>
     <div class="right-arrow">
-      >
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right"
+        viewBox="0 0 16 16">
+        <path
+          d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" />
+      </svg>
     </div>
   </div>
 </main>
