--- a/components/card/index.html
+++ b/components/card/index.html
@@ -15,7 +15,16 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+      <div class="card">
+        <div class="product-img"><img src="/components/card/img/Rectangle (1).png" alt=""></div>
+        <div class="star-price">
+          <button class="button-star"> 1.23 <img src="/components/card/img/Star 1.png" alt=""></button>
+          <div class="price">15555 UAH</div>
+        </div>
+        <div class="name">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
+        <div class="category"> laptops </div>
+        <div><button class="buy-button">add to cart</button></div>
+      </div>
   </div>
 </main>
 </body>
