--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
-
   <style>
     .wrapper {
       margin: 100px auto;
@@ -15,9 +16,34 @@
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <div class="pagination">
+      <button class="navi">
+        <a class="pagination-button" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+        </svg>
+        </a>
+      </button>
+      <button><a class="pagination-button" href="#">1</a></button>
+      <button><a class="pagination-button" href="#">2</a></button>
+      <button><a class="pagination-button" href="#">3</a></button>
+      <button><a class="pagination-button" href="#">4</a></button>
+      <button><a class="pagination-button" href="#">5</a></button>
+      <button><a class="pagination-button" href="#">6</a></button>
+      <button><a class="pagination-button" href="#">7</a></button>
+      <button><a class="pagination-button" href="#">8</a></button>
+      <button><a class="pagination-button" href="#">9</a></button>
+      <button><a class="pagination-button" href="#">10</a></button>
+
+      <button class="navi"><a class="pagination-button" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+        </svg>
+      </a>
+      </button>
+      </a>
+    </div>
   </div>
 </main>
-
 </body>
 </html>
