--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -14,8 +14,39 @@
 <body>
 
 <main>
-  <div class="wrapper">
-    <!-- Pagination component -->
+  <div>
+    <footer class="pagination">
+      <nav class="os-pagination">
+        <a class="page-link previous" href="#">
+          <i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+            </svg>
+          </i>
+        </a>
+        <ul class="page-list">
+          <li><a class="page-link active" href="#">1</a></li>
+          <li><a class="page-link" href="#">2</a></li>
+          <li><a class="page-link" href="#">3</a></li>
+          <li><a class="page-link" href="#">4</a></li>
+          <li><a class="page-link" href="#">5</a></li>
+          <li><a class="page-link" href="#">6</a></li>
+          <li><a class="page-link" href="#">7</a></li>
+          <li><a class="page-link" href="#">8</a></li>
+          <li><a class="page-link" href="#">9</a></li>
+          <li><a class="page-link" href="#">10</a></li>
+          <li><a class="page-link" href="#">11</a></li>
+          <li><a class="page-link" href="#">12</a></li>
+        </ul>
+        <a class="page-link next" href="#">
+          <i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+            </svg>
+          </i>
+        </a>
+      </nav>
+    </footer>
   </div>
 </main>
 
