--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -16,6 +16,30 @@
 <main>
   <div class="wrapper">
     <!-- Pagination component -->
+    <div class="paginations">
+      <ul class="paginations-list">
+        <li>
+          <img src="./images/vector-left.png" alt="image vector left" title="vector left">
+        </li>
+        <li class="actived">1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+        <li>11</li>
+        <li>12</li>
+        <li>
+          <img src="./images/vector-right.png" alt="image vector right" title="vector right">
+        </li>
+
+      </ul>
+    </div>
+
   </div>
 </main>
 
