--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 
   <style>
@@ -15,7 +16,57 @@
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <nav class="pagination">
+      <div class="button row">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+        </svg>
+      </div>
+
+      <div class="button">
+        <a class="link" href="#1">1</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#2">2</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#3">3</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#4">4</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#5">5</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#6">6</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#7">7</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#8">8</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#9">9</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#10">10</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#11">11</a>
+      </div>
+      <div class="button">
+        <a class="link" href="#12">12</a>
+      </div>
+
+      <div class="button row">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+        </svg>
+      </div>
+
+    </nav>
   </div>
 </main>
 
