little changes of bootstrap

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -8,7 +8,7 @@
   <style>
     .wrapper {
       margin: 100px auto;
-      width: 60%;
+      width: 590px;
       min-width: 590px;
       display: flex;
       justify-content: space-between;
@@ -30,6 +30,9 @@
 
     .roundpages:hover {
       background: #7E72F2;
+      color: aliceblue;
+      cursor: pointer;
+      transition: .3s;
     }
     .pull-of-rounds {
       /*height: 100%;*/
