--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -5,18 +5,28 @@
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <div class="back-button general-pages"> < </div>
+    <!-- <div class="pages"> -->
+      <div class="page-1 general-pages">1</div>
+      <div class="page-2 general-pages">2</div>
+      <div class="page-3 general-pages">3</div>
+      <div class="page-4 general-pages">4</div>
+      <div class="page-5 general-pages">5</div>
+      <div class="page-6 general-pages">6</div>
+      <div class="page-7 general-pages">7</div>
+      <div class="page-8 general-pages">8</div>
+      <div class="page-9 general-pages">9</div>
+      <div class="page-10 general-pages">10</div>
+    <!-- </div> -->
+    <div class="forward-button general-pages"> > </div>
+
   </div>
+
 </main>
 
 </body>
