--- a/components/card/index.html
+++ b/components/card/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 
   <style>
@@ -27,8 +28,8 @@
         <div class="product-price-block">
           <div class="product-rating">
             <span>1.23</span>
-            <i class="star">
-              &#9734</i></div>
+            <i class="bi bi-star">
+            </i></div>
         <div class="product-price">15999</div>
           </div>
         <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
