--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./style.css">
 
   <style>
@@ -15,25 +16,49 @@
 
 <main>
   <div class="wrapper">
-    <ul class="os-pagination">
-      <li class="os-pagination-prev"><i class="bi bi-chevron-left"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-      </svg></i></li>
-      <li class="os-pagination-number active">1</li>
-      <li class="os-pagination-number">3</li>
-      <li class="os-pagination-number">4</li>
-      <li class="os-pagination-number">5</li>
-      <li class="os-pagination-number">6</li>
-      <li class="os-pagination-number">7</li>
-      <li class="os-pagination-number">8</li>
-      <li class="os-pagination-number">9</li>
-      <li class="os-pagination-number">10</li>
-      <li class="os-pagination-number">11</li>
-      <li class="os-pagination-number">12</li>
-      <li class="os-pagination-next"> <i class="bi bi-chevron-right"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-      </svg></i></li>
-    </ul>
+    <nav class="os-pagination">
+      <a href="#" class="page-link previous" data-element="nav-prev">
+        <i class="bi bi-chevron-left"></i>
+      </a>
+
+      <ul class="page-list" data-element="pagination">
+        <li>
+          <a href="#" data-element="page-link" class="page-link active" data-page-index="0">1</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="1">2</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="2">3</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="3">4</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="4">5</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="5">6</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="6">7</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="7">8</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="8">9</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="9">10</a>
+        </li>
+      </ul>
+
+      <a href="#" class="page-link next" data-element="nav-next">
+        <i class="bi bi-chevron-right"></i>
+      </a>
+
+    </nav>
   </div>
 </main>
 
