--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
+
 <body>
-
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
-
+  <main>
+    <div class="osnova">
+      <div class="ramka">
+        <div class="krug krug-right"><i class="bi bi-chevron-left"></i></div>
+        <div class="krug">1</div>
+        <div class="krug">2</div>
+        <div class="krug">3</div>
+        <div class="krug">4</div>
+        <div class="krug">5</div>
+        <div class="krug">6</div>
+        <div class="krug">7</div>
+        <div class="krug">8</div>
+        <div class="krug">9</div>
+        <div class="krug">10</div>
+        <div class="krug">11</div>
+        <div class="krug">12</div>
+        <div class="krug krug-left"><i class="bi bi-chevron-right"></i></div>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
